app/film-database/components/movie/_fdDetails.scss
@use '/app/base/sass/util/functions' as f;
@use '/app/film-database/scss/fdMixins' as m;

.fdDetails {
  position: relative;
  z-index: 3;
  display: flex;
  flex-direction: column;
  height: inherit;
  padding: var(--fd-padding-generic) 0 calc(var(--fd-padding-generic) / 2) calc(var(--fd-padding-generic) / 1.5);
  @media (min-width: 950px) and (max-width: 1850px) {
    position: absolute;
    top: calc(50svh - var(--fd-gap) - (2.25rem * 2.5));
    transform: translateY(-50%);
    left: calc(var(--fd-padding-generic) / 1.5);
    padding: 0;
  }
  @media (max-width: 950px) {
    top: calc(80svh - var(--fd-gap) - (2.25rem * 2.5));
    padding: 0;
  }
  @media (max-width: 950px) {
    order: 2;
    position: relative;
    top: unset;
    left: unset;
    padding-top: calc(var(--fd-padding-generic));
  }
  @media (max-width: 650px) {
    padding: var(--fd-padding-generic) calc(var(--fd-padding-generic) / 1.5) 0 calc(var(--fd-padding-generic) / 1.5);
  }
  &[data-modal='false'] {
    justify-content: center;
  }
  &--close {
    position: absolute;
    z-index: 13;
    top: calc(var(--fd-padding-generic) / 1.5);
    right: calc(var(--fd-padding-generic) / 1.5);
    & svg {
      width: 1.6em;
      aspect-ratio: 1/1;
    }
  }
  & header {
    display: flex;
    align-items: center;
    gap: var(--fd-gap);
    & h2 {
      max-width: 28ch;
      white-space: nowrap;
      overflow: clip;
      text-overflow: ellipsis;
      @include m.fdFontXXL;
      text-transform: uppercase;
      text-shadow: var(--fd-font-shadow);
    }
    & button svg {
      width: 1.6em;
      aspect-ratio: 1/1;
    }
  }
  & footer {
    display: flex;
    gap: var(--fd-gap);
    padding-bottom: var(--fd-gap);
    & a {
      display: block;
      width: calc(2.25rem * 3.5); // 3.5x header font-size
    }
  }
  & p {
    display: -webkit-box;
    line-clamp: 4;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: clip;
    max-width: 57ch;
    @include m.fdFontM;
    text-shadow: var(--fd-font-shadow);
    @media (max-width: 1850px) {
      max-width: 47ch;
      display: none;
    }
    @media (max-width: 950px) {
      display: block;
    }
    @media (max-width: 650px) {
      max-width: 100%;
    }
  }
  &__col {
    display: flex;
    @media (max-width: 1850px) {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      grid-template-rows: repeat(2, 1fr);
      width: min-content;
    }
    @media (max-width: 950px) {
      display: flex;
    }
    @media (max-width: 650px) {
      display: flex;
      flex-direction: column;
    }
    &:nth-of-type(1) {
      gap: var(--fd-gap);
      @media (max-width: 650px) {
        gap: 5px;
        padding-bottom: 10px;
      }
    }
    &:nth-of-type(2) {
      gap: 6px;
      padding: calc(var(--fd-gap) / 2) 0 var(--fd-gap) 0;
      @include m.fdFontS;
      letter-spacing: 0.03em;
    }
    & li {
      display: flex;
      text-transform: capitalize;
      white-space: nowrap;
      @media (max-width: 1850px) {
        &:nth-of-type(1) {
          grid-area: 1 / 1 / 2 / 2;
        }
        &:nth-of-type(2) {
          grid-area: 1 / 2 / 2 / 3;
        }
        &:nth-of-type(3) {
          grid-area: 2 / 1 / 3 / 3;
          font-weight: 700;
          letter-spacing: 0.03em;
        }
      }
      @media (max-width: 650px) {
        &:nth-of-type(2) {
          white-space: wrap;
        }
      }
    }
  }
  &__providers {
    display: flex;
    flex-direction: column;
    gap: var(--fd-gap);
    padding: var(--fd-gap) 0 calc(var(--fd-gap) * 2) 0;
    &__provider {
      flex-direction: column;
      gap: var(--fd-gap);
      & div {
        @include m.fdFontM;
        text-transform: uppercase;
        font-weight: 700;
        line-height: 235%;
        letter-spacing: 0.04em;
      }
      & ul {
        display: flex;
        gap: var(--fd-gap);
        & li picture img {
          max-width: 60px;
          border-radius: var(--fd-border-radius);
          box-shadow: 0px 10px 11px -3px rgb(11 11 11);
        }
      }
    }
  }
  ~ .fdCineInfoCarousel:last-child {
    padding-bottom: var(--fd-padding-generic);
  }
}

.voteAvgVisual {
  display: flex;
  gap: calc(var(--fd-gap) / 12);
  &__star {
    width: 1.25em;
    & svg {
      width: inherit;
      aspect-ratio: 1;
    }
  }
}

.formattedReleaseDate {
  text-transform: capitalize;
  &[data-status='green'] {
    color: #54c470;
    text-transform: uppercase;
    font-weight: 700;
  }
}

